Fix structure, appears to be final fix using css page-break-inside:avoid; to stop wrapping issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ body {
 /* Layout and card Styles */
 
 #wrapper {
-    columns: 300px;
+    columns: 500px;
 }
 
 #header {
@@ -50,6 +50,7 @@ body {
 #weather {
     background: linear-gradient(135deg, #00feba, #5b548a);
     color: #fff;
+    border-radius: 20px;
     padding: 40px 35px;
     text-align: center;
 }
